Fixed horizontal scroll in the footer.

--- a/app/_scss/modules/_footer.scss
+++ b/app/_scss/modules/_footer.scss
@@ -10,4 +10,8 @@ footer#site-footer {
   a {
   	color: #333333;
   }
+  .row {
+    margin-right: 0;
+    margin-left: 0;
+  }
 }
